--- a/_config.yml
+++ b/_config.yml
@@ -6,15 +6,15 @@ description: > # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "http://jamessimo.com" # the base hostname & protocol for your site
 twitter_username: james_simo
 github_username:  jamessimo89@gmail.com
 
 # Build settings
 markdown: kramdown
 include:
-- .htaccess	
- 
+- .htaccess
+
 #permalink: pretty
 
 #kramdown:
